= Version History =

x.x:

- added: support for IDP provided username #2
- added: support for CAS #6

1.2 (2013-10-14):

- added: saving of the SAML attributes on login
- added: listing of saved SAML attributes in the user settings (only for admins)
- added: IDentity Provider support
- changed: no longer outputting the Exception during the registration process because of confusing errors
- changed: plugin settings only lists Service Provider configurations

1.1 (2013-04-05):

- added: index widget to show only SAML logins
- added: Dutch translation
- changed: layout of the no account linked page
- fixed: SAML icon now loads correctly
- fixed: auto generation of username now always makes valid usernames

1.0 (2012-12-27):

- first release