@@ -1,6 +1,6 @@
 SimpleSAML [![Scrutinizer Quality Score](https://scrutinizer-ci.com/g/ColdTrick/simplesaml/badges/quality-score.png?s=a48dc5fb7e9ff768373b2edfab24417435ddc1db)](https://scrutinizer-ci.com/g/ColdTrick/simplesaml/)
 ==========
-Connect your site to a SAML IDentity Provider (IDP) as a Service Provider (SP) or configure your Elgg installation as an IDP.
+Connect your site to a SAML/CAS IDentity Provider (IDP) as a Service Provider (SP) or configure your Elgg installation as an IDP.
 
 Requirements
 ------------ 
@@ -12,11 +12,14 @@ Features
 -------- 
 
 - Act as SAML Service Provider (SP)
+- Act as CAS Service Provider (SP)
 - Act as SAML Identity Provider (IDP)
-- Use multiple SAML IDP's (autodetects configured IDP's)
+- Use multiple external IDP's (autodetects configured IDP's)
 - Login with federated accounts
 - Optionally create accounts based on federated account data
-- Link existing account to multiple SAML accounts 
+- Link existing account to multiple external accounts 
+- Force authentication to an external IDP  
+	All your users will be forced to login using the configured external IDP
 
 ToDo
 ---- 
